src/style.scss
/**
 * The following styles get applied both on the front of your site
 * and in the editor.
 *
 * Replace them with your own styles or remove the file completely.
 */

.has-background * {
	background-color: inherit;
}

.wp-block-wcrh-wcrh-custom-nav {
	display: flex;
	gap: 1rem;
}

// Nav

.wp-block-wcrh-wcrh-custom-nav ul {
	display: flex;
	gap: 1rem;
	margin: 0;
	padding: 0;
}

.wp-block-wcrh-wcrh-custom-nav li {
	list-style: none;
	position: relative;
}

.wp-block-wcrh-wcrh-custom-nav .toplevel > li:last-of-type {
	display: none;
}

.wp-block-wcrh-wcrh-custom-nav a {
	text-decoration: none;
	transition: color 0.3s ease-in;
}

.wp-block-wcrh-wcrh-custom-nav .submenu {
	display: none;
}

.wp-block-wcrh-wcrh-custom-nav .nav-item:hover .submenu {
	position: absolute;
	display: flex;
	flex-direction: column;
	gap: 0;
	left: -1rem;
	padding: 0.5rem 1rem;
}

.wp-block-wcrh-wcrh-custom-nav .nav-item:hover {
	cursor: pointer;
}

.wp-block-wcrh-wcrh-custom-nav .submenu li {
	white-space: nowrap;
}

@media (max-width: 600px) {
	body {
		position: relative;
	}

	.menu-open {
		max-height: 100vh;
		overflow: hidden;
	}

	.wp-block-wcrh-wcrh-custom-nav .toplevel {
		display: none;
		position: absolute;
		z-index: 2;
		left: 0px;
		top: 0px;
		width: 100%;
		height: 100%;
		background: var(--wp--preset--color--base);
		overflow: hidden;
		transform: translateX(-100vw);
		transition: transform 0.3s ease-in;
	}

	.menu-open .wp-block-wcrh-wcrh-custom-nav .toplevel.anim {
		transform: translateX(0);
	}

	.menu-open .wp-block-wcrh-wcrh-custom-nav .toplevel.visible {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
	}

	.menu-open .wp-block-wcrh-wcrh-custom-nav ul {
		font-size: var(--wp--preset--font-size--large);
		text-align: center;
	}

	.menu-open .wp-block-wcrh-wcrh-custom-nav .submenu {
		display: flex;
		flex-direction: column;
		align-items: center;
	}

	.menu-open .wp-block-wcrh-wcrh-custom-nav span {
		display: none;
	}

	.wp-block-wcrh-wcrh-custom-nav .toplevel > li:last-of-type {
		display: block;
		margin-top: 2rem;
	}
}

// Hamburger

.wp-block-wcrh-wcrh-custom-nav button {
	display: none;
	background-color: unset;
	border: none;
	padding: 0;
}

.wp-block-wcrh-wcrh-custom-nav #open-mobile-menu {
	max-width: 2rem;
}

.wp-block-wcrh-wcrh-custom-nav #close-mobile-menu {
	font-family: var(--wp--preset--font-family--body);
	font-size: var(--wp--preset--font-size--small);
	color: var(--wp--preset--color--contrast-2);
	font-weight: normal;
}

.wp-block-wcrh-wcrh-custom-nav button:hover {
	cursor: pointer;
}

.wp-block-wcrh-wcrh-custom-nav svg {
	width: 100%;
}

@media (max-width: 600px) {
	.wp-block-wcrh-wcrh-custom-nav button {
		display: inline-block;
	}
}

